# Hopper

./: .gitattributes  .gitignore  LICENSE  README.md
Debug/: CODEGEN.hasm  Compile.hasm  DASM.hasm  Optimize.hasm  PreProcess.hasm  compileforth.mem.txt  game .csv  game.csv
Docs/: Chat GPTs wishlist for Hopper improvements.hs  Hopper 6502 Assembly Runtime Library.md  Hopper 6502 Assembly Syntax and Format.md  Hopper Language.md  Hopper Minimal Runtime Reference.md  Hopper Programming Language Overview for GPT.md  Hopper Runtime Spec.md  Hopper VM.md  Hopper notes for Chat GPT.md  Structured Programming In Hopper.md  System Library Reference.md  Unbrick Pins.txt
Docs/Claude/: Hopper 6502 Assembly Language.md  Hopper BASIC.md  Hopper MCU library.md  Hopper Microcontroller Library Reference.md  Hopper Programming Language Overview.md  Hopper Runtime Spec.md  Hopper System Library Reference.md  Hopper notes for Claude.md
Docs/Linux/: COM ports for Ubuntu under WSL.md
Runtimes/NETCore/: ConsoleKeyboard.cs  ConsoleScreen.cs  Diagnostics.cs  HopperFile.cs  HopperSystem.cs  IHopperKeyboard.cs  IHopperScreen.cs  Keyboard.cs  MCU.cs  NETCore.csproj  NETCore.sln  Program.cs  Runtime.cs  SPI.cs  Screen.cs  SerialCOM.cs  Wire.cs
Runtimes/RP2040/: BuildInstructions.txt  CMakeLists.txt  Common.h  Hopper.cpp  HopperArray.cpp  HopperArray.h  HopperDictionary.cpp  HopperDictionary.h  HopperList.cpp  HopperList.h  HopperMemory.cpp  HopperMemory.h  HopperPair.cpp  HopperPair.h  HopperString.cpp  HopperString.h  HopperVariant.cpp  HopperVariant.h  LibCalls.cpp  OpCodes.cpp  OpCodes.h  SysCalls.cpp
Runtimes/Universal/: Instructions.md  Readme.md
Source/6502/: System.hs
Source/Basic/: Basic.hs  BasicArrays.hs  Commands.hs  Errors.hs  Expression.hs  HopperCode.hs  Instructions.hs  Memory.hs  Parse.hs  Platform.hs  Sieve.bas  TiggerBASIC.hs  Tokenizer.hs
(+1289 files in other folders)
